--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
     "chart.js": "^4.4.1",
     "html2canvas": "^1.4.1",
     "papaparse": "^5.4.1",
-    "svelte-chartjs": "^3.1.5"
+    "svelte-chartjs": "^3.1.5",
+    "ws": "^8.16.0"
   },
   "devDependencies": {
-    "@types/papaparse": "^5.3.14"
+    "@types/papaparse": "^5.3.14",
+    "@types/ws": "^8.5.10"
   }
 }
