Add .gitignore entry for node_modules

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 vyssuals/src/lib/tests/__pycache__/classes.cpython-39.pyc
 vyssuals/src/lib/tests/__pycache__/ws_dummydata.cpython-39.pyc
+
+node_modules
