--- a/vyssuals/package.json
+++ b/vyssuals/package.json
@@ -15,6 +15,7 @@
     "@sveltejs/vite-plugin-svelte": "^3.0.1",
     "@tsconfig/svelte": "^5.0.2",
     "@types/chai": "^4.3.12",
+    "@types/lodash": "^4.17.0",
     "@types/mocha": "^10.0.6",
     "@types/uuid": "^9.0.8",
     "chai": "^5.1.0",
@@ -29,6 +30,7 @@
   },
   "dependencies": {
     "dexie": "^3.2.6",
+    "lodash.debounce": "^4.0.8",
     "posthog-js": "^1.116.2"
   }
 }
