--- a/vyssuals/package.json
+++ b/vyssuals/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "dexie": "^3.2.6",
     "lodash.debounce": "^4.0.8",
+    "lodash.isequal": "^4.5.0",
     "posthog-js": "^1.116.2"
   }
 }
